# package/handler/contact.go
@@ -47,7 +47,7 @@ func (handler *Handler) CreateContactPost(ctx *gin.Context) {
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /auth/contacts/get [GET]
+// @Router /api/contacts/get [GET]
 //@Security ApiKeyAuth
 func (handler *Handler) GetAllContact(ctx *gin.Context) {
 	logrus := handler.logrus
